Move fan auth to Google OAuth